(lang dune 2.9)
(using coq 0.2)
(name vcalyx)

(generate_opam_files true)

(package
 (name vcalyx)
 (version dev)
 (synopsis     "Coq formalization of the Calyx language")
 (maintainers  "Ryan Doenges and Priya Srikumar")
 (authors      "Ryan Doenges and Priya Srikumar")
 (homepage     "https://github.com/cucapra/calyx/tree/vcalyx")
 (bug_reports  "https://github.com/cucapra/calyx/tree/vcalyx")
 (license      "MIT")
 (depends
   (core (>= "0.15.0"))
   (ppx_let (>= "0.15.0"))
   (stdlib-shims (>= "0.3.0"))
   (coq-ceres (>= "0.4.0"))
   (coq-stdpp (>= "1.8.0"))
   (coq (>= "8.15.2"))
   (ocamlformat (and :build (>= "0.24.1")))))
