[package]
name = "cider-dap"
version = "0.1.0"
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dap = { git = "https://github.com/sztomi/dap-rs", tag = "v0.4.1-alpha1" }
argh.workspace = true
baa.workspace = true
cider.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
slog.workspace = true
slog-term.workspace = true
slog-async.workspace = true
owo-colors = "4.1"

[[bin]]
name = "cider-dap"
path = "src/main.rs"
