[package]
name = "cider-idx"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
version = "0.1.0"

[features]
serde = ["dep:serde"]

[dependencies]
ahash = "0.8"
smallvec = { workspace = true, features = ["union", "const_generics"] }
serde = { workspace = true, optional = true, features = ["derive"] }


[dev-dependencies]
proptest = "1.0.0"
