[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "mrxl"
author = "The Calyx Authors"
home-page = "https://docs.calyxir.org/frontends/mrxl.html"
classifiers = ["License :: OSI Approved :: MIT License"]
description-file = "README.md"
requires-python = ">=3.4"
requires = [
         "lark-parser",
]

[tool.flit.scripts]
mrxl = "mrxl.main:main"
