
[project]
name = "ntt-pipeline"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.3.0",
    "prettytable>=3.16.0",
]
version = "0.1.0"
description = ""

[tool.uv.sources]
calyx-ast = { workspace = true }

# [project.scripts]
# ntt-pipeline = "./gen-ntt-pipeline:main"

# [build-system]
# requires = ["flit_core >=3.2,<4"]
# build-backend = "flit_core.buildapi"
