[package]
name = "fud-core"
version = "0.0.2"
edition.workspace = true
license-file.workspace = true

keywords = ["build-tool"]
readme = "../README.md"
categories = ["build-tool"]
description = "Library for building declarative build tools"

[dependencies]
argh.workspace = true
cranelift-entity = "0.103.0"
serde.workspace = true
figment = { version = "0.10.12", features = ["toml"] }
pathdiff = { version = "0.2.1", features = ["camino"] }
camino = "1.1.6"
anyhow.workspace = true
log.workspace = true
env_logger.workspace = true
rhai = { version = "1.19.0", features = ["internals"] }
once_cell = "1.19.0"
ariadne = "0.4.1"
itertools.workspace = true
rand = "0.8.5"
egg = { version = "0.9.5", optional = true }

[dev-dependencies]
rand_chacha = "0.3.1"

[features]
egg_planner = ["dep:egg"]
