[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "AreaExtract"
authors = [{ name = "The Calyx Authors" }]
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
dependencies = ["plotly", "numpy"]
readme = "README.md"

[project.scripts]
aext = "AreaExtract.bin.extract:main"
